FrontEndUser&FrontEndDokter(Login,Registrasi,LupaPW)

--- a/app/src/main/res/layout/activity_edit_profile_kucing.xml
+++ b/app/src/main/res/layout/activity_edit_profile_kucing.xml
@@ -79,6 +79,7 @@
                 android:id="@+id/fotoprofile"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
+                android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center"
                 android:layout_marginTop="20dp"
