--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -45,7 +45,7 @@
                     style="@style/poppinsBold24spWhite"
                     android:layout_width="wrap_content"
                     android:layout_height="35dp"
-                    android:text="DLupa Kata Sandi" />
+                    android:text="Lupa Kata Sandi" />
             </LinearLayout>
         </RelativeLayout>
 
