--- a/app/src/main/res/layout/activity_detail_vet_puskeswan.xml
+++ b/app/src/main/res/layout/activity_detail_vet_puskeswan.xml
@@ -88,9 +88,9 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="0dp"
             android:orientation="horizontal"
-            android:padding="10dp">
+            android:padding="2dp">
 
             <TextView
                 style="@style/poppinsSemiBold24spOrange"
@@ -122,7 +122,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/lin_namavet"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="0dp"
             android:layout_marginEnd="10dp">
             <LinearLayout
                 android:layout_width="match_parent"
@@ -290,6 +290,16 @@
                     android:layout_height="wrap_content"
                     android:text="(021) 5560028"
                     android:paddingLeft="40dp"/>
+
+                <Button
+                    android:id="@+id/BtnMaps"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/rectangle_rounded"
+                    android:text="Tunjukan Lokasi Di Goggle Maps"
+                    android:textColor="@color/white"
+                    android:layout_width="280dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"/>
             </LinearLayout>
 
         </ScrollView>
