--- a/app/src/main/res/layout/activity_login_dokter.xml
+++ b/app/src/main/res/layout/activity_login_dokter.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.Login"
-    android:background="@color/white">
-
+    tools:context="Dokter.view.Login_Dokter">
 
     <TextView
         style="@style/poppinsBold24spOrange"
@@ -80,7 +80,7 @@
         android:text="Masuk"
         android:layout_marginTop="14dp"
         android:textAllCaps="false"/>
-    
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -100,4 +100,5 @@
             android:text="Mendaftar"
             android:layout_marginLeft="5dp"/>
     </LinearLayout>
+
 </RelativeLayout>
