--- a/app/src/main/res/layout/activity_otp_password.xml
+++ b/app/src/main/res/layout/activity_otp_password.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.ForgotPassword"
+    tools:context=".view.OtpPassword"
     android:background="@color/white">
 
     <androidx.appcompat.widget.Toolbar
@@ -88,45 +88,52 @@
                 android:orientation="horizontal">
 
                 <EditText
+                    android:id="@+id/etOTP1"
                     style="@style/poppinsBold16spOrange"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
-                    android:layout_below="@id/txv2"
-                    android:layout_marginTop="5dp"
-                    android:textColor="@color/PrimaryColor"
+                    android:inputType="text"
                     android:maxLength="1"
-                    android:textAlignment="center"
-                    android:background="@drawable/rectangle_rounded_stroke"
-                    android:paddingLeft="10dp" />
-
-                <EditText
-                    style="@style/poppinsBold16spOrange"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:layout_below="@id/txv2"
+                    android:imeOptions="actionNext"
                     android:layout_marginLeft="10dp"
-                    android:maxLength="1"
-                    android:textAlignment="center"
                     android:layout_marginTop="5dp"
+                    android:textAlignment="center"
                     android:background="@drawable/rectangle_rounded_stroke" />
 
                 <EditText
+                    android:id="@+id/etOTP2"
                     style="@style/poppinsBold16spOrange"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
-                    android:layout_below="@id/txv2"
+                    android:inputType="text"
                     android:maxLength="1"
+                    android:imeOptions="actionNext"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
+                    android:textAlignment="center"
+                    android:background="@drawable/rectangle_rounded_stroke" />
+
+                <EditText
+                    android:id="@+id/etOTP3"
+                    style="@style/poppinsBold16spOrange"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:inputType="text"
+                    android:maxLength="1"
+                    android:imeOptions="actionNext"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="5dp"
                     android:textAlignment="center"
                     android:background="@drawable/rectangle_rounded_stroke"/>
 
                 <EditText
+                    android:id="@+id/etOTP4"
                     style="@style/poppinsBold16spOrange"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
-                    android:layout_below="@id/txv2"
+                    android:inputType="text"
                     android:maxLength="1"
+                    android:imeOptions="actionNext"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="5dp"
                     android:textAlignment="center"
