--- a/app/src/main/res/layout/activity_riwayat_pasien.xml
+++ b/app/src/main/res/layout/activity_riwayat_pasien.xml
@@ -12,48 +12,28 @@
         android:layout_height="wrap_content"
         android:background="@drawable/base_orange"
         android:minHeight="?attr/actionBarSize"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
         android:theme="?attr/actionBarTheme"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp">
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/ivBack"
+            <TextView
+                android:id="@+id/tvTitle"
+                style="@style/poppinsBold24spWhite"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
-                android:padding="8dp"
-                android:src="@drawable/ic_back" />
-
-            <LinearLayout
+                android:layout_height="35dp"
+                android:text="Riwayat Pasien" />
+            <TextView
+                style="@style/poppinsMed12spWhite"
+                android:id="@+id/tvSubTitle"
+                android:text="Info riwayat pasien kamu"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="48dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/tvTitle"
-                    style="@style/poppinsBold20spWhite"
-                    android:layout_width="wrap_content"
-                    android:layout_height="25dp"
-                    android:text="Riwayat Pasien" />
-
-                <TextView
-                    android:id="@+id/tvSubTitle"
-                    style="@style/poppinsMed12spWhite"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Info riwayat pasien kamu" />
-            </LinearLayout>
-        </RelativeLayout>
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
 
     </androidx.appcompat.widget.Toolbar>
 
